<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tech.renovus.solarec</groupId>
	<artifactId>solarec.java</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
		<solarecVersion>0.0.1</solarecVersion>
		
		<lombok.version>1.18.30</lombok.version>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.4</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	
	<modules>
		<module>solarec.interfaces</module>
		<module>solarec.vo</module>
		<module>solarec.db</module>
		<module>solarec.implementations</module>
		<module>solarec.inverters</module>
		<module>solarec.schedule</module>
		<module>solarec.core</module>
	</modules>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<configuration>
					<excludes>
						<!-- Exclude classes with @Generated annotation -->
					</excludes>
					<includes>
						<!-- Include only renovus solarec code -->
						<include>tech/renovus/solarec/**/*</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>